--- a/MusicPlayer/Makefile
+++ b/MusicPlayer/Makefile
@@ -29,8 +29,8 @@ OBJ=$(COMMON_OBJ) $(CFG_OBJ)
 ALL_OBJ=$(OUTDIR)/dir.o $(OUTDIR)/draw.o $(OUTDIR)/main.o \
 	$(OUTDIR)/memory_share.o $(OUTDIR)/music.o $(OUTDIR)/touch.o 
 
-COMPILE=gcc -c    -g -o "$(OUTDIR)/$(*F).o" $(CFG_INC) "$<"
-LINK=gcc  -g -o "$(OUTFILE)" $(OBJ) $(CFG_LIB)
+COMPILE=arm-linux-gcc -c    -g -o "$(OUTDIR)/$(*F).o" $(CFG_INC) "$<"
+LINK=arm-linux-gcc  -g -o "$(OUTFILE)" $(OBJ) $(CFG_LIB)
 COMPILE_ADA=gnat -g -c -o "$(OUTDIR)/$(*F).o" "$<"
 COMPILE_ADB=gnat -g -c -o "$(OUTDIR)/$(*F).o" "$<"
 COMPILE_F=gfortran -c -g -o "$(OUTDIR)/$(*F).o" "$<"
@@ -92,8 +92,8 @@ OBJ=$(COMMON_OBJ) $(CFG_OBJ)
 ALL_OBJ=$(OUTDIR)/dir.o $(OUTDIR)/draw.o $(OUTDIR)/main.o \
 	$(OUTDIR)/memory_share.o $(OUTDIR)/music.o $(OUTDIR)/touch.o 
 
-COMPILE=gcc -c   -o "$(OUTDIR)/$(*F).o" $(CFG_INC) "$<"
-LINK=gcc  -o "$(OUTFILE)" $(OBJ) $(CFG_LIB)
+COMPILE=arm-linux-gcc -c   -o "$(OUTDIR)/$(*F).o" $(CFG_INC) "$<"
+LINK=arm-linux-gcc  -o "$(OUTFILE)" $(OBJ) $(CFG_LIB)
 COMPILE_ADA=gnat -O -c -o "$(OUTDIR)/$(*F).o" "$<"
 COMPILE_ADB=gnat -O -c -o "$(OUTDIR)/$(*F).o" "$<"
 COMPILE_F=gfortran -O -g -o "$(OUTDIR)/$(*F).o" "$<"
