视频播放器

--- a/Test/Makefile
+++ b/Test/Makefile
@@ -23,9 +23,13 @@ OUTFILE=$(OUTDIR)/Test
 CFG_INC=
 CFG_LIB=
 CFG_OBJ=
-COMMON_OBJ=$(OUTDIR)/main.o 
+COMMON_OBJ=$(OUTDIR)/album.o $(OUTDIR)/dir.o $(OUTDIR)/draw.o \
+	$(OUTDIR)/main.o $(OUTDIR)/memory_share.o $(OUTDIR)/music.o \
+	$(OUTDIR)/touch.o 
 OBJ=$(COMMON_OBJ) $(CFG_OBJ)
-ALL_OBJ=$(OUTDIR)/main.o 
+ALL_OBJ=$(OUTDIR)/album.o $(OUTDIR)/dir.o $(OUTDIR)/draw.o \
+	$(OUTDIR)/main.o $(OUTDIR)/memory_share.o $(OUTDIR)/music.o \
+	$(OUTDIR)/touch.o 
 
 COMPILE=arm-linux-gcc -c    -g -o "$(OUTDIR)/$(*F).o" $(CFG_INC) "$<"
 LINK=arm-linux-gcc  -g -o "$(OUTFILE)" $(OBJ) $(CFG_LIB)
@@ -36,22 +40,22 @@ COMPILE_F90=gfortran -c -g -o "$(OUTDIR)/$(*F).o" "$<"
 COMPILE_D=gdc -c -g -o "$(OUTDIR)/$(*F).o" "$<"
 
 # Pattern rules
-$(OUTDIR)/%.o : main/%.c
+$(OUTDIR)/%.o : %.c
 	$(COMPILE)
 
-$(OUTDIR)/%.o : main/%.ada
+$(OUTDIR)/%.o : %.ada
 	$(COMPILE_ADA)
 
-$(OUTDIR)/%.o : main/%.d
+$(OUTDIR)/%.o : %.d
 	$(COMPILE_D)
 
-$(OUTDIR)/%.o : main/%.adb
+$(OUTDIR)/%.o : %.adb
 	$(COMPILE_ADB)
 
-$(OUTDIR)/%.o : main/%.f90
+$(OUTDIR)/%.o : %.f90
 	$(COMPILE_F90)
 
-$(OUTDIR)/%.o : main/%.f
+$(OUTDIR)/%.o : %.f
 	$(COMPILE_F)
 
 # Build rules
@@ -84,9 +88,13 @@ OUTFILE=$(OUTDIR)/Test
 CFG_INC=
 CFG_LIB=
 CFG_OBJ=
-COMMON_OBJ=$(OUTDIR)/main.o 
+COMMON_OBJ=$(OUTDIR)/album.o $(OUTDIR)/dir.o $(OUTDIR)/draw.o \
+	$(OUTDIR)/main.o $(OUTDIR)/memory_share.o $(OUTDIR)/music.o \
+	$(OUTDIR)/touch.o 
 OBJ=$(COMMON_OBJ) $(CFG_OBJ)
-ALL_OBJ=$(OUTDIR)/main.o 
+ALL_OBJ=$(OUTDIR)/album.o $(OUTDIR)/dir.o $(OUTDIR)/draw.o \
+	$(OUTDIR)/main.o $(OUTDIR)/memory_share.o $(OUTDIR)/music.o \
+	$(OUTDIR)/touch.o 
 
 COMPILE=arm-linux-gcc -c   -o "$(OUTDIR)/$(*F).o" $(CFG_INC) "$<"
 LINK=arm-linux-gcc  -o "$(OUTFILE)" $(OBJ) $(CFG_LIB)
@@ -97,22 +105,22 @@ COMPILE_F90=gfortran -O -g -o "$(OUTDIR)/$(*F).o" "$<"
 COMPILE_D=gdc -c -g -o "$(OUTDIR)/$(*F).o" "$<"
 
 # Pattern rules
-$(OUTDIR)/%.o : main/%.c
+$(OUTDIR)/%.o : %.c
 	$(COMPILE)
 
-$(OUTDIR)/%.o : main/%.ada
+$(OUTDIR)/%.o : %.ada
 	$(COMPILE_ADA)
 
-$(OUTDIR)/%.o : main/%.d
+$(OUTDIR)/%.o : %.d
 	$(COMPILE_D)
 
-$(OUTDIR)/%.o : main/%.adb
+$(OUTDIR)/%.o : %.adb
 	$(COMPILE_ADB)
 
-$(OUTDIR)/%.o : main/%.f90
+$(OUTDIR)/%.o : %.f90
 	$(COMPILE_F90)
 
-$(OUTDIR)/%.o : main/%.f
+$(OUTDIR)/%.o : %.f
 	$(COMPILE_F)
 
 # Build rules
