--- a/Video/Makefile
+++ b/Video/Makefile
@@ -19,20 +19,18 @@ endif
 #
 ifeq "$(CFG)" "Debug"
 OUTDIR=Debug
-OUTFILE=$(OUTDIR)/Video
+OUTFILE=$(OUTDIR)/VideoPlayer
 CFG_INC=
 CFG_LIB=
 CFG_OBJ=
-COMMON_OBJ=$(OUTDIR)/album.o $(OUTDIR)/dir.o $(OUTDIR)/draw.o \
-	$(OUTDIR)/main.o $(OUTDIR)/memory_share.o $(OUTDIR)/music.o \
-	$(OUTDIR)/touch.o $(OUTDIR)/video.o 
+COMMON_OBJ=$(OUTDIR)/dir.o $(OUTDIR)/main.o $(OUTDIR)/memory_share.o \
+	$(OUTDIR)/touch.o $(OUTDIR)/video_player.o 
 OBJ=$(COMMON_OBJ) $(CFG_OBJ)
-ALL_OBJ=$(OUTDIR)/album.o $(OUTDIR)/dir.o $(OUTDIR)/draw.o \
-	$(OUTDIR)/main.o $(OUTDIR)/memory_share.o $(OUTDIR)/music.o \
-	$(OUTDIR)/touch.o $(OUTDIR)/video.o 
+ALL_OBJ=$(OUTDIR)/dir.o $(OUTDIR)/main.o $(OUTDIR)/memory_share.o \
+	$(OUTDIR)/touch.o $(OUTDIR)/video_player.o 
 
-COMPILE=gcc -c    -g -o "$(OUTDIR)/$(*F).o" $(CFG_INC) "$<"
-LINK=gcc  -g -o "$(OUTFILE)" $(OBJ) $(CFG_LIB)
+COMPILE=arm-linux-gcc -c    -g -o "$(OUTDIR)/$(*F).o" $(CFG_INC) "$<"
+LINK=arm-linux-gcc  -g -o "$(OUTFILE)" $(OBJ) $(CFG_LIB)
 COMPILE_ADA=gnat -g -c -o "$(OUTDIR)/$(*F).o" "$<"
 COMPILE_ADB=gnat -g -c -o "$(OUTDIR)/$(*F).o" "$<"
 COMPILE_F=gfortran -c -g -o "$(OUTDIR)/$(*F).o" "$<"
@@ -88,16 +86,14 @@ OUTFILE=$(OUTDIR)/Video
 CFG_INC=
 CFG_LIB=
 CFG_OBJ=
-COMMON_OBJ=$(OUTDIR)/album.o $(OUTDIR)/dir.o $(OUTDIR)/draw.o \
-	$(OUTDIR)/main.o $(OUTDIR)/memory_share.o $(OUTDIR)/music.o \
-	$(OUTDIR)/touch.o $(OUTDIR)/video.o 
+COMMON_OBJ=$(OUTDIR)/dir.o $(OUTDIR)/main.o $(OUTDIR)/memory_share.o \
+	$(OUTDIR)/touch.o $(OUTDIR)/video_player.o 
 OBJ=$(COMMON_OBJ) $(CFG_OBJ)
-ALL_OBJ=$(OUTDIR)/album.o $(OUTDIR)/dir.o $(OUTDIR)/draw.o \
-	$(OUTDIR)/main.o $(OUTDIR)/memory_share.o $(OUTDIR)/music.o \
-	$(OUTDIR)/touch.o $(OUTDIR)/video.o 
+ALL_OBJ=$(OUTDIR)/dir.o $(OUTDIR)/main.o $(OUTDIR)/memory_share.o \
+	$(OUTDIR)/touch.o $(OUTDIR)/video_player.o 
 
-COMPILE=gcc -c   -o "$(OUTDIR)/$(*F).o" $(CFG_INC) "$<"
-LINK=gcc  -o "$(OUTFILE)" $(OBJ) $(CFG_LIB)
+COMPILE=arm-linux-gcc -c   -o "$(OUTDIR)/$(*F).o" $(CFG_INC) "$<"
+LINK=arm-linux-gcc  -o "$(OUTFILE)" $(OBJ) $(CFG_LIB)
 COMPILE_ADA=gnat -O -c -o "$(OUTDIR)/$(*F).o" "$<"
 COMPILE_ADB=gnat -O -c -o "$(OUTDIR)/$(*F).o" "$<"
 COMPILE_F=gfortran -O -g -o "$(OUTDIR)/$(*F).o" "$<"
