--- a/Scheduler/Makefile
+++ b/Scheduler/Makefile
@@ -1,13 +1,15 @@
-CC := gcc
+CC := arm-linux-gcc
 CFLAGS := -L ../lib/libjpeg -lapi_v4l2_arm -lpthread -ljpeg
-INCLUDE :=-I ../mylib/ -I ../lib/libjpeg 
+INCLUDE :=-I ../mylib/ -I ../lib/libjpeg  -I../Album -I../Camera -I../CrossLine \
+          -I../GuaGuaLe -I../Menu -I../MusicPlayer -I../SlideUnlock -I../Chat \
+	   -I../VideoPlayer
 CSources := $(wildcard *.c ../mylib/*.c )
 
 Objs := $(CSources:.c=.o)
 
-
-Socket:
-	$(CC) main.c -g -I../mylib -o Socket -lpthread
+Scheduler:$(Objs)
+	echo "compling"
+	$(CC) $^ -o $@   $(CFLAGS)
 
 -include $(CSources:.c=.d)
 
