前7天工作完成-下阶段做语音识别

--- a/Scheduler/Makefile
+++ b/Scheduler/Makefile
@@ -8,7 +8,7 @@ CSources := $(wildcard *.c ../mylib/*.c)
 
 Objs := $(CSources:.c=.o)
 
-Scheduler:$(Objs)
+Main:$(Objs)
 	$(CC) $^ -o $@   $(CFLAGS)
 
 -include $(CSources:.c=.d)
